Added a countdown component just because

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import NavBar from "../components/NavBar.astro";
 import Layout from "../layouts/Layout.astro";
+import Countdown from "../components/Countdown.astro";
 ---
 
 <Layout title="VeeHac">
@@ -32,6 +33,7 @@ import Layout from "../layouts/Layout.astro";
         our first hackathon! We are definitely not stealing ANYTHING for VHack!
       </div>
     </div>
+    <Countdown />
   </div>
 </Layout>
 
