--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import NavBar from "../components/NavBar.astro";
+import Countdown from "../components/Countdown.astro";
 
 interface Props {
   title: string;
