login, registration, forget password

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -20,7 +20,7 @@ const { backgroundColor } = Astro.props;
         <a href="">About</a>
       </div>
       <div class="navbar-item login">
-        <a style="color: #433F6C" href="">Login</a>
+        <a style="color: #433F6C" href="/login">Login</a>
       </div>
     </div>
   </div>
