--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,9 +24,10 @@ const { title } = Astro.props;
   </body>
 </html>
 <style is:global>
-	body {
-		margin: 0;
-	}
+  body {
+    margin: 0;
+    font-family: "Chesna Grotesk", sans-serif;
+  }
 
   @font-face {
     font-family: "Chesna Grotesk";
@@ -66,8 +67,7 @@ const { title } = Astro.props;
     src:
       local("Chesna Grotesk Book"),
       local("ChesnaGrotesk-Book"),
-      url("fonts/ChesnaGrotesk-Book.eot?#iefix")
-        format("embedded-opentype"),
+      url("fonts/ChesnaGrotesk-Book.eot?#iefix") format("embedded-opentype"),
       url("fonts/ChesnaGrotesk-Book.woff2") format("woff2"),
       url("fonts/ChesnaGrotesk-Book.woff") format("woff"),
       url("fonts/ChesnaGrotesk-Book.ttf") format("truetype");
@@ -82,8 +82,7 @@ const { title } = Astro.props;
     src:
       local("Chesna Grotesk Black"),
       local("ChesnaGrotesk-Black"),
-      url("fonts/ChesnaGrotesk-Black.eot?#iefix")
-        format("embedded-opentype"),
+      url("fonts/ChesnaGrotesk-Black.eot?#iefix") format("embedded-opentype"),
       url("fonts/ChesnaGrotesk-Black.woff2") format("woff2"),
       url("fonts/ChesnaGrotesk-Black.woff") format("woff"),
       url("fonts/ChesnaGrotesk-Black.ttf") format("truetype");
@@ -114,8 +113,7 @@ const { title } = Astro.props;
     src:
       local("Chesna Grotesk Regular"),
       local("ChesnaGrotesk-Regular"),
-      url("fonts/ChesnaGrotesk-Regular.eot?#iefix")
-        format("embedded-opentype"),
+      url("fonts/ChesnaGrotesk-Regular.eot?#iefix") format("embedded-opentype"),
       url("fonts/ChesnaGrotesk-Regular.woff2") format("woff2"),
       url("fonts/ChesnaGrotesk-Regular.woff") format("woff"),
       url("fonts/ChesnaGrotesk-Regular.ttf") format("truetype");
@@ -162,8 +160,7 @@ const { title } = Astro.props;
     src:
       local("Chesna Grotesk Semi Bold"),
       local("ChesnaGrotesk-SemiBold"),
-      url("fonts/ChesnaGrotesk-SemiBold.eot?#iefix")
-        format("embedded-opentype"),
+      url("fonts/ChesnaGrotesk-SemiBold.eot?#iefix") format("embedded-opentype"),
       url("fonts/ChesnaGrotesk-SemiBold.woff2") format("woff2"),
       url("fonts/ChesnaGrotesk-SemiBold.woff") format("woff"),
       url("fonts/ChesnaGrotesk-SemiBold.ttf") format("truetype");
@@ -194,8 +191,7 @@ const { title } = Astro.props;
     src:
       local("Chesna Grotesk ExtLt Ita"),
       local("ChesnaGrotesk-ExtLtIta"),
-      url("fonts/ChesnaGrotesk-ExtLtIta.eot?#iefix")
-        format("embedded-opentype"),
+      url("fonts/ChesnaGrotesk-ExtLtIta.eot?#iefix") format("embedded-opentype"),
       url("fonts/ChesnaGrotesk-ExtLtIta.woff2") format("woff2"),
       url("fonts/ChesnaGrotesk-ExtLtIta.woff") format("woff"),
       url("fonts/ChesnaGrotesk-ExtLtIta.ttf") format("truetype");
@@ -210,8 +206,7 @@ const { title } = Astro.props;
     src:
       local("Chesna Grotesk Light"),
       local("ChesnaGrotesk-Light"),
-      url("fonts/ChesnaGrotesk-Light.eot?#iefix")
-        format("embedded-opentype"),
+      url("fonts/ChesnaGrotesk-Light.eot?#iefix") format("embedded-opentype"),
       url("fonts/ChesnaGrotesk-Light.woff2") format("woff2"),
       url("fonts/ChesnaGrotesk-Light.woff") format("woff"),
       url("fonts/ChesnaGrotesk-Light.ttf") format("truetype");
@@ -226,8 +221,7 @@ const { title } = Astro.props;
     src:
       local("Chesna Grotesk Bold"),
       local("ChesnaGrotesk-Bold"),
-      url("fonts/ChesnaGrotesk-Bold.eot?#iefix")
-        format("embedded-opentype"),
+      url("fonts/ChesnaGrotesk-Bold.eot?#iefix") format("embedded-opentype"),
       url("fonts/ChesnaGrotesk-Bold.woff2") format("woff2"),
       url("fonts/ChesnaGrotesk-Bold.woff") format("woff"),
       url("fonts/ChesnaGrotesk-Bold.ttf") format("truetype");
@@ -258,8 +252,7 @@ const { title } = Astro.props;
     src:
       local("Chesna Grotesk Thin"),
       local("ChesnaGrotesk-Thin"),
-      url("fonts/ChesnaGrotesk-Thin.eot?#iefix")
-        format("embedded-opentype"),
+      url("fonts/ChesnaGrotesk-Thin.eot?#iefix") format("embedded-opentype"),
       url("fonts/ChesnaGrotesk-Thin.woff2") format("woff2"),
       url("fonts/ChesnaGrotesk-Thin.woff") format("woff"),
       url("fonts/ChesnaGrotesk-Thin.ttf") format("truetype");
@@ -290,8 +283,7 @@ const { title } = Astro.props;
     src:
       local("Chesna Grotesk Medium"),
       local("ChesnaGrotesk-Medium"),
-      url("fonts/ChesnaGrotesk-Medium.eot?#iefix")
-        format("embedded-opentype"),
+      url("fonts/ChesnaGrotesk-Medium.eot?#iefix") format("embedded-opentype"),
       url("fonts/ChesnaGrotesk-Medium.woff2") format("woff2"),
       url("fonts/ChesnaGrotesk-Medium.woff") format("woff"),
       url("fonts/ChesnaGrotesk-Medium.ttf") format("truetype");
