--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,13 @@ import NavBar from "../components/NavBar.astro";
 import Layout from "../layouts/Layout.astro";
 import Countdown from "../components/Countdown.astro";
 import Timeline from "../components/Timeline.astro";
+import FAQ from "../components/FAQ.astro";
+import Footer from "../components/Footer.astro";
+
+const faqItems = [ 
+  { question: "What is the Skibidi Toilet?", answer: "Skibidi Toilet is a meme where people mimic a dance move that looks like an exaggerated version of using the toilet. It's one of those strange yet hilarious trends that captured the internet's attention." }, 
+  { question: "Who is Hawk Tuah?", answer: "Hawk Tuah is a fictional character who has gained a following in online communities. He's a blend of traditional folklore and modern internet culture, often portrayed as a humorous and heroic figure." }, 
+  { question: "What is 'Thick of it' by KSI?", answer: "'Thick of it' is a song by KSI, a popular YouTuber turned musician. The term is also used to describe being deeply involved in a complicated situation, similar to being in the midst of chaos." },]
 ---
 
 <Layout title="VeeHac">
@@ -42,7 +49,12 @@ import Timeline from "../components/Timeline.astro";
       <div><p style="font-size: 36px;">TIMELINE</p></div>
       <Timeline />
     </div>
+    <div class="faq">
+      <div><p style="font-size: 36px;">FAQ</p></div>
+      <FAQ items={faqItems} />
+    </div>
   </div>
+  <Footer />
 </Layout>
 
 <style>
@@ -111,6 +123,15 @@ import Timeline from "../components/Timeline.astro";
 
   /* timeline */
   .timeline {
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  /* FAQ */
+  .faq {
     align-items: center;
     justify-items: center;
     width: 100%;
