Winner page added

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -14,7 +14,7 @@ const { backgroundColor } = Astro.props;
       </div>
 
       <div class="navbar-item">
-        <a href="">Winners</a>
+        <a href="/winner">Winners</a>
       </div>
       <div class="navbar-item">
         <a href="">About</a>
