--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -34,6 +34,7 @@ import Layout from "../layouts/Layout.astro"
     justify-content: center;
     align-items: center;
     gap: 40px;
+    height: 360px;
   }
 
   .text-container {
@@ -101,7 +102,7 @@ import Layout from "../layouts/Layout.astro"
     const seconds = document.getElementById("seconds")
 
     // Target date: January 1st, 2025
-    const targetTime = new Date("January 1, 2025 00:00:00")
+    const targetTime = new Date("November 10, 2024 19:41:30")
     let diff = targetTime - new Date()
 
     const updateCountdown = () => {
