--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -1,9 +1,10 @@
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-ExtraLight.eot");
+  src: url("fonts/ChesnaGrotesk-ExtraLight.woff2") format("woff2");
   src:
     local("Chesna Grotesk Extra Light"),
     local("ChesnaGrotesk-ExtraLight"),
+    url("fonts/ChesnaGrotesk-ExtraLight.eot") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-ExtraLight.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-ExtraLight.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-ExtraLight.woff") format("woff"),
@@ -15,12 +16,12 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-LightItalic.eot");
+  src: url("fonts/ChesnaGrotesk-LightItalic.woff2") format("woff2");
   src:
     local("Chesna Grotesk Light Italic"),
     local("ChesnaGrotesk-LightItalic"),
-    url("fonts/ChesnaGrotesk-LightItalic.eot?#iefix")
-      format("embedded-opentype"),
+    url("fonts/ChesnaGrotesk-LightItalic.eot") format("embedded-opentype"),
+    url("fonts/ChesnaGrotesk-LightItalic.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-LightItalic.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-LightItalic.woff") format("woff"),
     url("fonts/ChesnaGrotesk-LightItalic.ttf") format("truetype");
@@ -31,10 +32,11 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-Book.eot");
+  src: url("fonts/ChesnaGrotesk-Book.woff2") format("woff2");
   src:
     local("Chesna Grotesk Book"),
     local("ChesnaGrotesk-Book"),
+    url("fonts/ChesnaGrotesk-Book.eot") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-Book.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-Book.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-Book.woff") format("woff"),
@@ -46,10 +48,11 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-Black.eot");
+  src: url("fonts/ChesnaGrotesk-Black.woff2") format("woff2");
   src:
     local("Chesna Grotesk Black"),
     local("ChesnaGrotesk-Black"),
+    url("fonts/ChesnaGrotesk-Black.eot") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-Black.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-Black.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-Black.woff") format("woff"),
@@ -61,10 +64,11 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-BookItalic.eot");
+  src: url("fonts/ChesnaGrotesk-BookItalic.woff2") format("woff2");
   src:
     local("Chesna Grotesk Book Italic"),
     local("ChesnaGrotesk-BookItalic"),
+    url("fonts/ChesnaGrotesk-BookItalic.eot") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-BookItalic.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-BookItalic.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-BookItalic.woff") format("woff"),
@@ -76,10 +80,11 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-Regular.eot");
+  src: url("fonts/ChesnaGrotesk-Regular.woff2") format("woff2");
   src:
     local("Chesna Grotesk Regular"),
     local("ChesnaGrotesk-Regular"),
+    url("fonts/ChesnaGrotesk-Regular.eot") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-Regular.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-Regular.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-Regular.woff") format("woff"),
@@ -91,12 +96,12 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-MediumItalic.eot");
+  src: url("fonts/ChesnaGrotesk-MediumItalic.woff2") format("woff2");
   src:
     local("Chesna Grotesk Medium Italic"),
     local("ChesnaGrotesk-MediumItalic"),
-    url("fonts/ChesnaGrotesk-MediumItalic.eot?#iefix")
-      format("embedded-opentype"),
+    url("fonts/ChesnaGrotesk-MediumItalic.eot") format("embedded-opentype"),
+    url("fonts/ChesnaGrotesk-MediumItalic.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-MediumItalic.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-MediumItalic.woff") format("woff"),
     url("fonts/ChesnaGrotesk-MediumItalic.ttf") format("truetype");
@@ -107,12 +112,12 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-RegularItalic.eot");
+  src: url("fonts/ChesnaGrotesk-RegularItalic.woff2") format("woff2");
   src:
     local("Chesna Grotesk Regular Italic"),
     local("ChesnaGrotesk-RegularItalic"),
-    url("fonts/ChesnaGrotesk-RegularItalic.eot?#iefix")
-      format("embedded-opentype"),
+    url("fonts/ChesnaGrotesk-RegularItalic.eot") format("embedded-opentype"),
+    url("fonts/ChesnaGrotesk-RegularItalic.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-RegularItalic.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-RegularItalic.woff") format("woff"),
     url("fonts/ChesnaGrotesk-RegularItalic.ttf") format("truetype");
@@ -123,10 +128,11 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-SemiBold.eot");
+  src: url("fonts/ChesnaGrotesk-SemiBold.woff2") format("woff2");
   src:
     local("Chesna Grotesk Semi Bold"),
     local("ChesnaGrotesk-SemiBold"),
+    url("fonts/ChesnaGrotesk-SemiBold.eot") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-SemiBold.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-SemiBold.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-SemiBold.woff") format("woff"),
@@ -138,12 +144,12 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-BlackItalic.eot");
+  src: url("fonts/ChesnaGrotesk-BlackItalic.woff2") format("woff2");
   src:
     local("Chesna Grotesk Black Italic"),
     local("ChesnaGrotesk-BlackItalic"),
-    url("fonts/ChesnaGrotesk-BlackItalic.eot?#iefix")
-      format("embedded-opentype"),
+    url("fonts/ChesnaGrotesk-BlackItalic.eot") format("embedded-opentype"),
+    url("fonts/ChesnaGrotesk-BlackItalic.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-BlackItalic.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-BlackItalic.woff") format("woff"),
     url("fonts/ChesnaGrotesk-BlackItalic.ttf") format("truetype");
@@ -154,10 +160,11 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-ExtLtIta.eot");
+  src: url("fonts/ChesnaGrotesk-ExtLtIta.woff2") format("woff2");
   src:
     local("Chesna Grotesk ExtLt Ita"),
     local("ChesnaGrotesk-ExtLtIta"),
+    url("fonts/ChesnaGrotesk-ExtLtIta.eot") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-ExtLtIta.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-ExtLtIta.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-ExtLtIta.woff") format("woff"),
@@ -169,10 +176,11 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-Light.eot");
+  src: url("fonts/ChesnaGrotesk-Light.woff2") format("woff2");
   src:
     local("Chesna Grotesk Light"),
     local("ChesnaGrotesk-Light"),
+    url("fonts/ChesnaGrotesk-Light.eot") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-Light.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-Light.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-Light.woff") format("woff"),
@@ -184,10 +192,11 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-Bold.eot");
+  src: url("fonts/ChesnaGrotesk-Bold.woff2") format("woff2");
   src:
     local("Chesna Grotesk Bold"),
     local("ChesnaGrotesk-Bold"),
+    url("fonts/ChesnaGrotesk-Bold.eot") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-Bold.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-Bold.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-Bold.woff") format("woff"),
@@ -199,10 +208,11 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-BoldItalic.eot");
+  src: url("fonts/ChesnaGrotesk-BoldItalic.woff2") format("woff2");
   src:
     local("Chesna Grotesk Bold Italic"),
     local("ChesnaGrotesk-BoldItalic"),
+    url("fonts/ChesnaGrotesk-BoldItalic.eot") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-BoldItalic.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-BoldItalic.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-BoldItalic.woff") format("woff"),
@@ -214,10 +224,11 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-Thin.eot");
+  src: url("fonts/ChesnaGrotesk-Thin.woff2") format("woff2");
   src:
     local("Chesna Grotesk Thin"),
     local("ChesnaGrotesk-Thin"),
+    url("fonts/ChesnaGrotesk-Thin.eot") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-Thin.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-Thin.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-Thin.woff") format("woff"),
@@ -229,10 +240,11 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-ThinItalic.eot");
+  src: url("fonts/ChesnaGrotesk-ThinItalic.woff2") format("woff2");
   src:
     local("Chesna Grotesk Thin Italic"),
     local("ChesnaGrotesk-ThinItalic"),
+    url("fonts/ChesnaGrotesk-ThinItalic.eot") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-ThinItalic.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-ThinItalic.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-ThinItalic.woff") format("woff"),
@@ -244,10 +256,11 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-Medium.eot");
+  src: url("fonts/ChesnaGrotesk-Medium.woff2") format("woff2");
   src:
     local("Chesna Grotesk Medium"),
     local("ChesnaGrotesk-Medium"),
+    url("fonts/ChesnaGrotesk-Medium.eot") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-Medium.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-Medium.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-Medium.woff") format("woff"),
@@ -259,12 +272,12 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-ExtraBoldItalic.eot");
+  src: url("fonts/ChesnaGrotesk-ExtraBoldItalic.woff2") format("woff2");
   src:
     local("Chesna Grotesk ExtBd Ita"),
     local("ChesnaGrotesk-ExtraBoldItalic"),
-    url("fonts/ChesnaGrotesk-ExtraBoldItalic.eot?#iefix")
-      format("embedded-opentype"),
+    url("fonts/ChesnaGrotesk-ExtraBoldItalic.eot") format("embedded-opentype"),
+    url("fonts/ChesnaGrotesk-ExtraBoldItalic.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-ExtraBoldItalic.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-ExtraBoldItalic.woff") format("woff"),
     url("fonts/ChesnaGrotesk-ExtraBoldItalic.ttf") format("truetype");
@@ -275,12 +288,12 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-SemiBoldItalic.eot");
+  src: url("fonts/ChesnaGrotesk-SemiBoldItalic.woff2") format("woff2");
   src:
     local("Chesna Grotesk Semi Bold Italic"),
     local("ChesnaGrotesk-SemiBoldItalic"),
-    url("fonts/ChesnaGrotesk-SemiBoldItalic.eot?#iefix")
-      format("embedded-opentype"),
+    url("fonts/ChesnaGrotesk-SemiBoldItalic.eot") format("embedded-opentype"),
+    url("fonts/ChesnaGrotesk-SemiBoldItalic.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-SemiBoldItalic.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-SemiBoldItalic.woff") format("woff"),
     url("fonts/ChesnaGrotesk-SemiBoldItalic.ttf") format("truetype");
@@ -291,10 +304,11 @@
 
 @font-face {
   font-family: "Chesna Grotesk";
-  src: url("fonts/ChesnaGrotesk-ExtraBold.eot");
+  src: url("fonts/ChesnaGrotesk-ExtraBold.woff2") format("woff2");
   src:
     local("Chesna Grotesk Extra Bold"),
     local("ChesnaGrotesk-ExtraBold"),
+    url("fonts/ChesnaGrotesk-ExtraBold.eot") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-ExtraBold.eot?#iefix") format("embedded-opentype"),
     url("fonts/ChesnaGrotesk-ExtraBold.woff2") format("woff2"),
     url("fonts/ChesnaGrotesk-ExtraBold.woff") format("woff"),
