judge things idk reactivity

--- a/src/pages/winner.astro
+++ b/src/pages/winner.astro
@@ -6,7 +6,7 @@ import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="VeeHac">
-    <NavBar backgroundColor="#827BD2" />
+    <NavBar backgroundColor="#433f6c" />
 
   <!-- Header Section -->
   <header class="header">
