convert astro components to react to enable reactivity for judge dashboard

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,9 @@ const { title } = Astro.props;
   </head>
   <body>
     <slot />
+    <script
+      src="https://kit.fontawesome.com/1ce99b1531.js"
+      crossorigin="anonymous"></script>
   </body>
 </html>
 <style is:global>
